--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,11 @@
+<!--
+    Title: index.html
+    Date: 04 April 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for the home component. 
+-->
+
 <div fxLayout="column" class="main-welcome">
   <h1 class="title">
     Welcome to WEB 450's - Bob's Computer Repair Shop <br />
