--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -1,1 +1,9 @@
+<!--
+    Title: index.html
+    Date: 04 April 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for the auth-layout component. 
+-->
+
 <p>auth-layout works!</p>
