--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,3 +1,11 @@
+<!--
+    Title: index.html
+    Date: 04 April 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for th base-layout component.
+-->
+
 <div fxLayout="column">
 
   <!-- navigation -->
