--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,9 +1,9 @@
 <!--
     Title: index.html
-    Date: 04 April 2022
+    Date: 22 April 2022
     Authors: Evan Durkin, Keith Hall,
     Gustavo Roo Gonzalez, and Gunner Bradley
-    Description: Html file for the auth-layout component.
+    Description: Html file for the sign-in component.
 -->
 
-<router-outlet></router-outlet>
+<p>sign-in works!</p>
