--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -248,6 +248,7 @@ $altTheme: mat-light-theme($theme-primary, $theme-accent, $theme-warn);
   font-size: 24px;
   font-family: "Material Icons", "Material Icons";
   .mat-badge-content {
-    font-family: "Karla";
+  font-family: "Karla";
+  font-weight: 800;
   }
 }
