--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -54,7 +54,7 @@
         <ng-container matColumnDef="functions">
           <th mat-header-cell *matHeaderCellDef>Functions</th>
           <td mat-cell *matCellDef="let element">
-            <button mat-icon-button routerLink="/users/{{ element._id }}">
+            <button mat-icon-button routerLink="/users/{{ element._id }}" (click)="openUserUpdateDialog()">
               <mat-icon class="edit-icon">edit</mat-icon>
             </button>
             <button
