--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -6,4 +6,50 @@
     Description: Html file for th base-layout component.
 -->
 
-<router-outlet></router-outlet>
+<!--
+    Title: index.html
+    Date: 22 April 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for th base-layout component.
+-->
+
+<div fxLayout="column">
+
+  <!-- navigation -->
+  <nav fxFlex>
+    <mat-toolbar>
+      <!-- navbar container -->
+      <div class="navbar-container">
+        <!-- logo -->
+        <button class="logo" routerLink="/" mat-button>BCRS</button>
+        <button class="navbar-link" mat-button>services</button>
+        <button class="navbar-link" routerLink="/" mat-button>about</button>
+        <button class="navbar-link" routerLink="/" mat-button>contact</button>
+        <button class="navbar-link" routerLink="/" mat-button>sign up</button>
+        <a href="/api/session/sign-in">Log into your account</a>
+      </div>
+    </mat-toolbar>
+  </nav>
+
+  <!-- main content -->
+  <div fxFlex>
+    <main class="main-content" fxFlex="100%;">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+
+  <!-- footer -->
+  <div fxFlex>
+    <footer class="footer">
+      <mat-toolbar class="footer-content">
+        <p>
+          &copy; {{year | date: 'yyyy'}} - Bob's Computer Repair Shop - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+        </p>
+      </mat-toolbar>
+    </footer>
+  </div>
+
+</div>
+
+
