adding base-layout styling

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -252,3 +252,11 @@ $altTheme: mat-light-theme($theme-primary, $theme-accent, $theme-warn);
   font-weight: 800;
   }
 }
+
+body {
+  margin: 0;
+  background-color: #cccccc }
+
+  footer {
+    background-color: #8a8a8a;
+  }
