--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,13 +1,5 @@
 <!--
     Title: index.html
-    Date: 04 April 2022
-    Authors: Evan Durkin, Keith Hall,
-    Gustavo Roo Gonzalez, and Gunner Bradley
-    Description: Html file for th base-layout component.
--->
-
-<!--
-    Title: index.html
     Date: 22 April 2022
     Authors: Evan Durkin, Keith Hall,
     Gustavo Roo Gonzalez, and Gunner Bradley
@@ -18,16 +10,16 @@
 
   <!-- navigation -->
   <nav fxFlex>
-    <mat-toolbar>
+    <mat-toolbar class="toolbar">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <button class="logo" routerLink="/" mat-button>BCRS</button>
+        <button class="logo-navbar" routerLink="/" mat-button>Bob's <br/>Computer Repair Shop</button>
         <button class="navbar-link" mat-button>services</button>
         <button class="navbar-link" routerLink="/" mat-button>about</button>
         <button class="navbar-link" routerLink="/" mat-button>contact</button>
         <button class="navbar-link" routerLink="/" mat-button>sign up</button>
-        <a href="/api/session/sign-in">Log into your account</a>
+        <a href="/api/session/sign-in" class="signInLink">Sign into your account</a>
       </div>
     </mat-toolbar>
   </nav>
@@ -43,7 +35,7 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        <p>
+        <p style="    margin-left: 2em;">
           &copy; {{year | date: 'yyyy'}} - Bob's Computer Repair Shop - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
         </p>
       </mat-toolbar>
