--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -60,8 +60,8 @@
   </nav>
 
   <!-- main content -->
-  <div fxFlex>
-    <main class="main-content" fxFlex="100%;">
+  <div fxFlex style="margin: 0 auto;">
+    <main class="main-content">
       <router-outlet></router-outlet>
     </main>
   </div>
