--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -7,7 +7,9 @@
 // Description: Css file for the base-layout component.
 =======================================
 */
-
+.main-content {
+  margin: 0 auto;
+}
   .mat-toolbar-row, .mat-toolbar-single-row {
     align-items: flex-end;
     height: fit-content;
