--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -8,14 +8,9 @@
 =======================================
 */-->
 
-<div fxLayout="column">
-  <mat-card class="hp-card">
-    <mat-card-title>Users Configuration</mat-card-title>
-    <mat-card-subtitle>
-      <button mat-button routerLink="/users/create/new" color="basic">
-        Create
-      </button>
-    </mat-card-subtitle>
+<div fxLayout="column" style="margin-top: 3em;">
+  <mat-card class="users-list-card">
+    <mat-card-title class="users-title">Users Configuration</mat-card-title>
 
     <mat-card-content *ngIf="users">
       <table mat-table [dataSource]="users">
@@ -55,13 +50,13 @@
           <th mat-header-cell *matHeaderCellDef>Functions</th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button routerLink="/users/{{ element._id }}" (click)="openUserUpdateDialog()">
-              <mat-icon class="edit-icon">edit</mat-icon>
+              <mat-icon class="edit-icon functions-icon">edit</mat-icon>
             </button>
             <button
               mat-icon-button
               (click)="delete(element._id, element.userName)"
             >
-              <mat-icon color="warn">delete</mat-icon>
+              <mat-icon color="black" class="functions-icon">delete</mat-icon>
             </button>
           </td>
         </ng-container>
@@ -69,6 +64,9 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      <button mat-button routerLink="/users/create/new" class="btn-add-user" style="margin-bottom: 10px;">
+        add+
+      </button>
     </mat-card-content>
   </mat-card>
 </div>
