--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,6 @@
 
 html, body { height: 100%; }
 
-/* body {
-  margin: 0;
-  background-color: pink;  } */
+.functions-icon:hover {
+  color: #33ff66;
+}
