--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -7,9 +7,23 @@
 // Description: styling for the auth-layout component.
 =======================================================
 */
+
+/************* Main Container *************/
 .main-content {
   margin: 0 auto;
 }
+
+/************* Navigation Bar Styling *************/
+.navbar-container {
+  margin: 2em;
+  display: flex;
+  align-items: flex-end;
+}
+
+.navbar-link {
+  font-size: 24px;
+}
+
 .mat-toolbar-row, .mat-toolbar-single-row {
   align-items: flex-end;
   height: fit-content;
@@ -26,19 +40,7 @@
   padding-left: 16px;
 }
 
-.navbar-container {
-  margin: 2em;
-  display: flex;
-  align-items: flex-end;
-}
-
-.navbar-link {
-  font-size: 24px;
-}
-
-.main-content {
-  /* padding-left: 30px; */
-}
+/************* Footer Styling *************/
 
 .footer {
   bottom: 0;
