--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -9,10 +9,13 @@
 */-->
 
 <div fxLayout="column" style="margin-top: 3em;">
+
+  <!--mat card to hold users configuration table-->
   <mat-card class="users-list-card">
     <mat-card-title class="users-title">Users Configuration</mat-card-title>
 
     <mat-card-content *ngIf="users">
+      <!-- mat-table with header sections for user data-->
       <table mat-table [dataSource]="users">
         <ng-container matColumnDef="userName">
           <th mat-header-cell *matHeaderCellDef>Username</th>
@@ -47,6 +50,7 @@
         </ng-container>
 
         <ng-container matColumnDef="functions">
+          <!-- functions for editing and deleting a user -->
           <th mat-header-cell *matHeaderCellDef>Functions</th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button routerLink="/users/{{ element._id }}" (click)="openUserUpdateDialog()">
@@ -54,8 +58,7 @@
             </button>
             <button
               mat-icon-button
-              (click)="delete(element._id, element.userName)"
-            >
+              (click)="delete(element._id, element.userName)">
               <mat-icon color="black" class="functions-icon">delete</mat-icon>
             </button>
           </td>
@@ -64,9 +67,12 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+
+      <!-- button to add a new users -->
       <button mat-button routerLink="/users/create/new" class="btn-add-user" style="margin-bottom: 10px;">
-        add+
+        add +
       </button>
+
     </mat-card-content>
   </mat-card>
 </div>
