--- a/src/app/pages/sign-in/sign-in.component.css
+++ b/src/app/pages/sign-in/sign-in.component.css
@@ -7,3 +7,7 @@
 // Description: Css file for the sign-in component.
 =======================================
 */
+
+.sign-in-container {
+margin-top: 5px;
+}
