--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -8,42 +8,38 @@
 =======================================================
 */
 
+/* Navigation styling */
 .mat-toolbar-row, .mat-toolbar-single-row {
   align-items: flex-end;
   height: fit-content;
 }
-
 .logo-navbar {
-    font-size: 46px;
-    letter-spacing: -3pt;
-    text-align: left;
-    color: #568e67;
-  }
-
+  font-size: 46px;
+  letter-spacing: -3pt;
+  text-align: left;
+  color: #568e67;
+ }
 .profile-icon {
   padding-left: 16px;
 }
-
 .navbar-container {
   margin: 2em;
   display: flex;
   align-items: flex-end;
 }
-
 .navbar-link {
   font-size: 24px;
 }
-
+/* Main content area */
 .main-content {
   padding-left: 30px;
 }
 
+/* footer */
 .footer {
-  bottom: 0;
-  position: absolute;
+  margin-top: 10%;
   width: 100%;
 }
-
 .footer-content {
   font-size: 16px;
   padding-left: 100px;
@@ -53,12 +49,10 @@
   padding: 20px;
   background-color: #8a8a8a;
 }
-
 .bu-link {
   color: white;
   text-decoration: none;
 }
-
 .bu-link:hover {
   text-decoration: underline;
 }
