--- a/src/app/pages/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/pages/dashboard-admin/dashboard-admin.component.html
@@ -10,52 +10,7 @@
 
   <!-- navigation -->
   <nav fxFlex>
-    <mat-toolbar>
-      <!-- navbar container -->
-      <div class="navbar-container">
-        <!-- logo -->
-        <button class="logo" routerLink="/" mat-button>BCRS</button>
-
-        <button class="navbar-link" routerLink="/" mat-button>Dashboard</button>
-        <button class="navbar-link" routerLink="/" mat-button></button>
-        <button class="navbar-link" mat-button>more features ^</button>
-      </div>
-      <div fxFlex></div>
-        <button class="profile-icon" mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="User Profile Menu">Admin
-          <mat-icon style="color:#7CFC00">perm_identity</mat-icon>
-        </button>
-        <!-- Icon drop down menu items -->
-        <mat-menu #profileMenu="matMenu">
-          <p style="padding: 10px;color:white; font-size:16px" class="menu">
-              <span style="margin-left:4px"></span><mat-icon>account_box</mat-icon><span style="margin-left:6%">Signed in as</span>
-              <span
-                style="font-weight: 600;font-size: 24px"
-              >{{ userName }}</span>
-          </p>
-          <mat-divider></mat-divider>
-          <button  mat-menu-item (click)="userConfig()" class="menu">
-            <mat-icon class="menu">people</mat-icon>
-            <span class="menu">User Configuration</span>
-          </button>
-          <button  mat-menu-item (click)="questionConfig()" class="menu">
-            <mat-icon class="menu">security</mat-icon>
-            <span class="menu">Security Question Configuration</span>
-          </button>
-          <button  mat-menu-item (click)="roleConfig()" class="menu">
-            <mat-icon class="menu">admin_panel_settings</mat-icon>
-            <span class="menu">Role Configuration</span>
-          </button>
-          <button  mat-menu-item (click)="adminReport()">
-            <mat-icon class="menu">pie_chart_outline</mat-icon>
-            <span class="menu">Service Graph</span>
-          </button>
-          <mat-divider></mat-divider>
-          <button mat-menu-item (click)="signOut()" class="menu">
-            <mat-icon class="menu">logout</mat-icon>
-            <span class="menu">Sign-Out</span>
-          </button>
-        </mat-menu>
-    </mat-toolbar>
+    <router-outlet></router-outlet>
   </nav>
 
   <!-- main content -->
