--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -19,7 +19,7 @@
         <button class="navbar-link" routerLink="/" mat-button>about</button>
         <button class="navbar-link" routerLink="/" mat-button>contact</button>
         <button class="navbar-link" routerLink="/" mat-button>sign up</button>
-        <a href="/api/session/sign-in" class="signInLink">Sign into your account</a>
+        <button class="navbar-link signInLink" routerLink='/session/sign-in' mat-button>Sign into your account</button>
       </div>
     </mat-toolbar>
   </nav>
