--- a/src/app/pages/security-question-create/security-question-create.component.html
+++ b/src/app/pages/security-question-create/security-question-create.component.html
@@ -1,1 +1,29 @@
-<p>security-question-create works!</p>
+<div fxLayout="column">
+  <mat-card class="mat-elevation-z8">
+    <mat-card-title>Create Security Question</mat-card-title>
+
+    <br/>
+
+    <form [formGroup]="form" (ngSubmit)="create()" #securityQuestionForm>
+      <mat-card-content>
+        <div fxLayout="column" fxLayoutGap="10px">
+          <mat-form-field>
+            <input type="text" matInput [formControl]="form.controls['text']"
+                    placeholder="Question Text" (keydown.enter)="create()" />
+
+                    <mat-error *ngIf="form.controls.text.hasError('required') && form.controls.text.touched" class="error">
+                      Security question is a required field.
+                    </mat-error>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+
+      <br/>
+
+      <mat-card-actions layout-align="end">
+        <button mat-stroked-button (click)="cancel()">cancel</button>
+        <button type="submit" [disabled]="!form.valid" mat-stroked-button>submit</button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
