--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
 -->
 
   <div fxLayout="row wrap" fxLayoutAlign="center start">
-    <div fxFlex.gt-sm="50" fxFlex="100">
+    <div fxFlex.gt-sm="45" fxFlex="100">
 
       <!-- Sign in card -->
       <mat-card class="mat-elevation-z5 sign-in-container"><br><br>
@@ -16,9 +16,9 @@
           Bob's Computer Repair Shop
         </mat-card-title>
         <br><br>
-        <mat-card-subtitle class="valid-title" style="text-align: center;font-family:Karia;color:#f5f5f5">Please enter a valid username and password to proceed</mat-card-subtitle>
+        <mat-card-subtitle class="valid-title" style="text-align: center;font-family:Karla;color:#f5f5f5">Please enter a valid username and password to proceed</mat-card-subtitle>
         <mat-card-content>
-          <small  style="color: red;font-family:Karia"  *ngIf="errorMessage"> {{ errorMessage }}</small>
+          <small  style="color: red;font-family:Karla"  *ngIf="errorMessage"> {{ errorMessage }}</small>
           <br>
           <mat-card class="mat-elevation-z0">
 
@@ -47,7 +47,7 @@
 
               <!-- Sign-in button -->
               <mat-card-actions>
-                <button mat-raised-button style="color:#003515;background-color:#568e67;font-size:16px" type="submit" [disabled]="!form.valid" fxFlex>Sign In</button>
+                <button mat-raised-button style="color:#003515;background-color:#568e67;font-size:18px;font-family:Karla" type="submit" [disabled]="!form.valid" fxFlex>Sign In</button>
               </mat-card-actions>
               <p style="text-align: center; font-weight: lighter;"><a routerLink="#" style="text-decoration: underline;color:#F5F5F5" class="help-link" color="primary">Create an Account</a></p>
               <p style="text-align:center"><a routerLink="#" style="text-decoration: underline; color:#F5F5F5" class="help-link" align="end">Forgot Password?</a></p>
