--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -1,37 +1,19 @@
-/*
-=======================================================
-// Title: Bob’s Computer Repair Shop
-// Date: 04 April 2022
-// Authors: Evan Durkin, Keith Hall,
-// Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: styling for the auth-layout component.
-=======================================================
-*/
-
-.mat-toolbar-row, .mat-toolbar-single-row {
-  align-items: flex-end;
-  height: fit-content;
+.logo {
+  margin-left: 75px;
+  font-size: 24px;
+  font-weight: lighter;;
 }
-
-.logo-navbar {
-    font-size: 46px;
-    letter-spacing: -2pt;
-    text-align: left;
-    color: #568e67;
-  }
-
-.profile-icon {
-  padding-left: 16px;
+span {
+  font-family: Karla;
 }
 
 .navbar-container {
-  margin: 2em;
-  display: flex;
-  align-items: flex-end;
+  padding: 5px;
 }
 
 .navbar-link {
   font-size: 24px;
+  font-weight: lighter;
 }
 
 .main-content {
@@ -39,24 +21,23 @@
 }
 
 .footer {
+  position: fixed;
   bottom: 0;
-  position: absolute;
-  width: 100%;
+  left: 0;
+  right: 0;
+
 }
 
 .footer-content {
   font-size: 16px;
+  font-weight: lighter;
   padding-left: 100px;
   letter-spacing: 3px;
-  font-family: 'Karla', sans-serif;
-  font-weight: 400;
-  padding: 20px;
-  background-color: #8a8a8a;
 }
 
 .bu-link {
-  color: white;
   text-decoration: none;
+  color: wheat;
 }
 
 .bu-link:hover {
