--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -29,7 +29,7 @@
                 <span style="margin-left:4px"></span>
                 <mat-icon>account_box</mat-icon>
                 <span style="margin-left:6%">Signed in as</span>
-                <span style="font-weight: 600;font-size: 24px;margin-left:4px">{{ userName }}</span>
+                <span style="font-weight: 600;font-size: 24px;margin-left:10px">{{ userName }}</span>
             </p>
 
           <!-- Divider space in dropdown -->
@@ -69,8 +69,8 @@
   </nav>
 
   <!-- main content -->
-  <div fxFlex style="margin: 0 auto;">
-    <main class="main-content">
+  <div fxFlex>
+    <main class="main-content" fxFlex="100%;">
       <router-outlet></router-outlet>
     </main>
   </div>
@@ -87,4 +87,3 @@
   </div>
 
 </div>
-
