--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -7,19 +7,24 @@
 -->
 
 <div fxLayout="column">
-
   <!-- navigation -->
   <nav fxFlex>
     <mat-toolbar class="toolbar">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <button class="logo-navbar" routerLink="/" mat-button>Bob's <br/>Computer Repair Shop</button>
+        <button class="logo-navbar" routerLink="/" mat-button>
+          Bob's <br />Computer Repair Shop
+        </button>
         <button class="navbar-link" mat-button>services</button>
         <button class="navbar-link" routerLink="/" mat-button>about</button>
         <button class="navbar-link" routerLink="/" mat-button>contact</button>
-        <button class="navbar-link" routerLink="/" mat-button>sign up</button>
-        <a href="/api/session/sign-in" class="signInLink">Sign into your account</a>
+        <button class="navbar-link" routerLink="/sign-up" mat-button>
+          sign up
+        </button>
+        <a href="/api/session/sign-in" class="signInLink"
+          >Sign into your account</a
+        >
       </div>
     </mat-toolbar>
   </nav>
@@ -35,13 +40,13 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        <p style="    margin-left: 2em;">
-          &copy; {{year | date: 'yyyy'}} - Bob's Computer Repair Shop - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+        <p style="margin-left: 2em">
+          &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
+          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank"
+            >Bellevue University</a
+          >
         </p>
       </mat-toolbar>
     </footer>
   </div>
-
 </div>
-
-
