--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -1,7 +1,7 @@
 .logo {
   margin-left: 75px;
   font-size: 24px;
-  font-weight: lighter;;
+  font-weight: lighter;
 }
 span {
   font-family: Karla;
@@ -17,7 +17,7 @@ span {
 }
 
 .main-content {
-  padding-left: 30px;
+  padding-left: 0px;
 }
 
 .footer {
@@ -25,7 +25,6 @@ span {
   bottom: 0;
   left: 0;
   right: 0;
-
 }
 
 .footer-content {
