--- a/src/app/shared/post-layout/post-layout.component.css
+++ b/src/app/shared/post-layout/post-layout.component.css
@@ -4,10 +4,6 @@
 // Date: 22 April 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: Css file for the sign-in component.
+// Description: Css file for the post-layout component.
 =======================================
 */
-
-.sign-in-container {
-margin-top: 17%;
-}
