--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -22,12 +22,12 @@
         <button class="navbar-link" routerLink="/sign-up" mat-button>
           sign up
         </button>
-        <a href="/api/session/sign-in" class="signInLink"
+        <a href="/api/post-session/sign-in" class="signInLink"
           >Sign into your account</a
         >
         <button
           class="navbar-link signInLink"
-          routerLink="/session/sign-in"
+          routerLink="/post-session/sign-in"
           mat-button
         >
           Sign into your account
