--- a/src/app/pages/user-update/user-update.component.html
+++ b/src/app/pages/user-update/user-update.component.html
@@ -1,35 +1,1 @@
-<!--
-    Title: Bob's Computer Repair Shop
-    Date: 23 April 2022
-    Authors: Evan Durkin, Keith Hall,
-    Gustavo Roo Gonzalez, and Gunner Bradley
-    Description: pop-up dialog screen for updating a user's profile info
--->
-
-<h2 style="font-size: headline;" mat-dialog-title>Edit User</h2>
-
-<mat-dialog-content [formGroup]="userForm">
-  <mat-form-field>
-  <input type="text" placeholder="First Name" matInput formControlName="firstName" [value]="userInfo.firstName"/>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" placeholder="Last Name" matInput formControlName="lastName"/>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" placeholder="Address" matInput formControlName="address"/>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" placeholder="Email Address" matInput formControlName="email"/>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" placeholder="Phone Number" matInput formControlName="phoneNumber"/>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" placeholder="role" matInput formControlName="role"/>
-  </mat-form-field>
-</mat-dialog-content>
-
-<mat-dialog-actions layout-align="end">
-  <button mat-button (click)="cancel()">cancel</button>
-  <button mat-button [disabled]="!userForm.valid" (click)="updateUser()">update</button>
-</mat-dialog-actions>
+<p>user-update works!</p>
