--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -59,8 +59,7 @@
             </button>
             <button
               mat-icon-button
-              (click)="delete(element._id, element.userName)"
-            >
+              (click)="delete(element._id, element.userName)">
               <mat-icon color="black" class="functions-icon" >delete</mat-icon>
             </button>
           </td>
