--- a/src/app/pages/user-update/user-update.component.html
+++ b/src/app/pages/user-update/user-update.component.html
@@ -1,1 +1,79 @@
-<p>user-update works!</p>
+ <!--
+    Title: index.html
+    Date: 22 April 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for the user-update component.
+-->
+
+<div fxLayout="column">
+  <mat-card style="margin: 1% 20% 1% 20%" class="mat-elevation-z8">
+    <mat-card-title>User Details</mat-card-title>
+    <br />
+    <form [formGroup]="form" (ngSubmit)="saveUser()" #userForm>
+      <mat-card-content>
+        <div fxLayout="column" fxLayoutGap="10px">
+          <mat-form-field>
+            <input type="text" matInput
+              [formControl]="form.controls['firstName']"
+              placeholder="First name"/>
+
+            <mat-error
+              class="error" *ngIf="form.controls.firstName.hasError('required') &&
+                form.controls.firstName.touched">First name is a required field</mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <input type="text" matInput [formControl]="form.controls['lastName']"
+              placeholder="Last name"/>
+            <mat-error class="error" *ngIf="
+                form.controls.lastName.hasError('required') &&
+                form.controls.lastName.touched" >Last name is a required field.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input type="text" matInput [formControl]="form.controls['phoneNumber']
+			"placeholder="Phone number"/>
+            <mat-error class="error"*ngIf=
+			"form.controls.phoneNumber.hasError('required') &&
+            form.controls.phoneNumber.touched">Phone number is a required field.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input type="text" matInput [formControl]="form.controls['address']
+			"placeholder="Address" />
+            <mat-error
+              class="error" *ngIf="
+                form.controls.address.hasError('required') &&
+                form.controls.address.touched">Address is a required field.
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field>
+            <input type="text" matInput [formControl]="form.controls['email']
+			"placeholder="Email"/>
+            <mat-error
+              class="error" *ngIf="
+                form.controls.email.hasError('required') &&
+                form.controls.email.touched">Email is a required field.
+            </mat-error>
+
+            <mat-error
+              class="error" *ngIf="
+                form.controls.email.hasError('email') &&
+                form.controls.email.touched">Invalid email format.
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+      <br />
+      <mat-card-actions align="end">
+        <button mat-raised-button (click)="cancel()" color="accent">Cancel
+        </button>
+        <button mat-raised-button [disabled]="!form.valid" color="accent">Submit
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
