--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -6,4 +6,31 @@
     Description: Html file for the about component.
 -->
 
-<p>about works!</p>
+<div
+  fxLayout="row"
+  fxLayoutAlign="center center"
+  fxFlex="30"
+  class="about-container"
+>
+  <div fxLayout="column" fxLayoutAlign="center start">
+    <h1 class="about-main-title">
+      <span>Bob's</span><br />Computer <br />Repair Shop
+    </h1>
+  </div>
+  <div fxLayout="column" fxLayoutAlign="center start" class="about-main-body">
+    <h2 class="about-subtitle">about us</h2>
+    <p class="about-p">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat.
+    </p>
+    <h2 class="about-subtitle">overview</h2>
+    <p class="about-p">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat.
+    </p>
+  </div>
+</div>
