--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -17,8 +17,12 @@
           Bob's <br />Computer Repair Shop
         </button>
         <button class="navbar-link" mat-button>services</button>
-        <button class="navbar-link" routerLink="/" mat-button>about</button>
-        <button class="navbar-link" routerLink="/" mat-button>contact</button>
+        <button class="navbar-link" routerLink="/about" mat-button>
+          about
+        </button>
+        <button class="navbar-link" routerLink="/contact" mat-button>
+          contact
+        </button>
         <button class="navbar-link" routerLink="/sign-up" mat-button>
           sign up
         </button>
