adding findSelectedSecurityQuestions API

--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -19,17 +19,12 @@
         <button class="navbar-link" mat-button>services</button>
         <button class="navbar-link" routerLink="/" mat-button>about</button>
         <button class="navbar-link" routerLink="/" mat-button>contact</button>
-        <button class="navbar-link" routerLink="/sign-up" mat-button>
-          sign up
-        </button>
-        <a href="/api/post-session/sign-in" class="signInLink"
-          >Sign into your account</a
-        >
+        <button class="navbar-link" routerLink="/sign-up" mat-button>sign up</button>
+
         <button
           class="navbar-link signInLink"
           routerLink="/post-session/sign-in"
-          mat-button
-        >
+          mat-button>
           Sign into your account
         </button>
       </div>
@@ -47,21 +42,9 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        <<<<<<< HEAD
         <p style="margin-left: 2em">
           &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
-          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank"
-            >Bellevue University</a
-          >
-          =======
-        </p>
-
-        <p style="margin-left: 2em">
-          &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
-          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank"
-            >Bellevue University</a
-          >
-          >>>>>>> 2fa3e27f11ebbfde09b4e5f36ae64a34aa832a7f
+          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
         </p>
       </mat-toolbar>
     </footer>
