Edit users working

--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -50,7 +50,7 @@
                 <button mat-raised-button style="color:#003515;background-color:#568e67;font-size:18px;font-family:Karla" type="submit" [disabled]="!form.valid" fxFlex>Sign In</button>
               </mat-card-actions>
               <p style="text-align: center; font-weight: lighter;"><a routerLink="#" style="text-decoration: underline;color:#F5F5F5" class="help-link" color="primary">Create an Account</a></p>
-              <p style="text-align:center"><a routerLink="#" style="text-decoration: underline; color:#F5F5F5" class="help-link" align="end">Forgot Password?</a></p>
+              <p style="text-align:center"><a routerLink="/post-session/user-details" style="text-decoration: underline; color:#F5F5F5" class="help-link" align="end">Forgot Password?</a></p>
             </form>
           </mat-card>
         </mat-card-content>
