--- a/src/app/pages/user-update/user-update.component.html
+++ b/src/app/pages/user-update/user-update.component.html
@@ -71,7 +71,7 @@
       <mat-card-actions align="end">
         <button mat-raised-button (click)="cancel()" color="accent">Cancel
         </button>
-        <button mat-raised-button [disabled]="!form.valid" color="accent">Submit
+        <button type="submit" mat-raised-button [disabled]="!form.valid" color="accent">Submit
         </button>
       </mat-card-actions>
     </form>
