--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -21,25 +21,7 @@ span {
   margin-bottom: 5%;
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 .footer-content {
-  font-size: 16px;
-  font-weight: lighter;
-  padding-left: 100px;
-  letter-spacing: 3px;
+  padding: 20px
 }
 
-.bu-link {
-  text-decoration: none;
-  color: wheat;
-}
-
-.bu-link:hover {
-  text-decoration: underline;
-}
