--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -10,14 +10,13 @@
 
   <!-- navigation -->
   <nav fxFlex>
-
-    <mat-toolbar>
+    <mat-toolbar class="toolbar">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <button class="logo-navbar" routerLink="/" mat-button>Bob's <br/> Computer Repair Shop</button>
-        <button class="navbar-link" routerLink="/" mat-button>dashboard</button>
-        <button class="navbar-link" mat-button>more features</button>
+        <a href="/" class="logo-navbar">Bob's <br/> Computer Repair Shop</a>
+        <a href="/" class="navbar-link">dashboard</a>
+        <a href="/" class="navbar-link">more features</a>
         <button class="navbar-link profile-icon"
           mat-icon-button [matMenuTriggerFor]="profileMenu"
           aria-label="User Profile Menu">admin
@@ -79,8 +78,9 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        <p style="margin-left: 2em;">
-          &copy; {{year | date: 'yyyy'}} - Bob's Computer Repair Shop - <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+        <p style="margin-left: 2em">
+          &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
+          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
         </p>
       </mat-toolbar>
     </footer>
