correcting nav-bar routerLinks

--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -14,9 +14,9 @@
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <a href="/" class="logo-navbar">Bob's <br/> Computer Repair Shop</a>
-        <a href="/" class="navbar-link">dashboard</a>
-        <a href="/" class="navbar-link">more features</a>
+        <a routerLink="/" class="logo-navbar">Bob's <br/> Computer Repair Shop</a>
+        <a routerLink="/" class="navbar-link">dashboard</a>
+        <a routerLink="/" class="navbar-link">more features</a>
         <button class="navbar-link profile-icon"
           mat-icon-button [matMenuTriggerFor]="profileMenu"
           aria-label="User Profile Menu">admin
