--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -13,13 +13,13 @@
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <a href="/" class="logo-navbar">
+        <a routerLink="/" class="logo-navbar">
           Bob's <br />Computer Repair Shop
         </a>
-        <a href="/about" class="navbar-link">
+        <a routerLink="/about" class="navbar-link">
           about
         </a>
-        <a href="/contact" class="navbar-link">
+        <a routerLink="contact" class="navbar-link">
           contact
         </a>
         <button
@@ -29,7 +29,7 @@
         sign-in
       </button>
       <br/>
-      <a href="/sign-up" class="registerLink">register for an account</a>
+      <a routerLink="/sign-up" class="registerLink">register for an account</a>
       </div>
     </mat-toolbar>
   </nav>
